bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:4: error: type mismatch;
 found   : Unit
 required: Boolean
    nombre = true
           ^NearHundred:6: error: type mismatch;
 found   : Unit
 required: Boolean
    nombre = true 
           ^NearHundred:5: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (Math.abs(n-200)<10) {
         ^